--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 script:
 - flake8 dsul_*.py
 - mypy dsul_*.py
-- python -m unittest tests.test_dsul_daemon.py
+- python -m unittest tests.test_dsul_daemon
 - echo "Done"
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
