[WIP] Adds proper py package support
- Updates requirements.
- Updates tests.
- Updates pre-commit config.
- Updates daemon.
- Updates cli.
- Changes directory structure.
- Changes LED color command protocol.
  - Adds support for setting an individual LED. Index = 0 means all
  LEDs.
  - IPC command value format: <index>:<r>:<g>:<b>
- Moves settings to it's own module.
- Adds py project file.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,13 +19,13 @@ repos:
     rev: v0.790
     hooks:
       - id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports, --namespace-packages]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.3.0
     hooks:
       - id: check-merge-conflict
       - id: check-toml
       - id: mixed-line-ending
-        fix: no
   - repo: local
     hooks:
       - id: check-strings
