[WIP] Improves daemon and cli
- Updates serial handling for better performance.
- Updates ipc handling for better performance.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=1c104053bc2f9addd05159a78da700015ff8e6ea3f85bd613745ace98914e890
+dist: bionic
 language: python
 python:
 - 3.6
 - 3.7
 - 3.8
 install:
-- pip install -r requirements.cli.txt
-- pip install -r requirements.daemon.txt
 - pip install -r requirements.development.txt
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -17,6 +16,7 @@ before_script:
 script:
 - flake8 dsul/*.py
 - mypy dsul
+- pylint dsul
 - python -m unittest
 - echo "Done"
 after_script:
