Updates tests and helpers
- Adds code coverage report.
- Adds new requirements for testing and code coverage.
- Updates tests for daemon.
- Updates setup.cfg to allow tests with pytest and code coverage.
- Updates pre-commit config.
- Updates Travis-CI config.
- Updates .gitignore.
- Bug fixes in mockserial.py.
- Moved check-strings.sh to scripts directory.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,11 +31,11 @@ repos:
       - id: check-strings
         name: check-strings
         language: script
-        entry: ./check-strings.sh
+        entry: ./scripts/check-strings.sh
         files: ''
         exclude: |
           (?x)^(
-            check-strings.sh|
+            scripts/check-strings.sh|
             README.md|
             LICENSE
           )$
