--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,9 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-- flake8 dsul/*.py
-- mypy dsul
-- pylint dsul
-- python -m unittest
-- echo "Done"
+  - flake8 dsul/*.py
+  - mypy dsul
+  - pylint dsul
+  - pytest
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
