--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,19 @@ install_requires =
   PyYAML >= 5.3
 
 [options.entry_points]
-  console_scripts =
-      dsul-daemon = dsul.daemon:main [pyserial]
-      dsul-cli = dsul.cli:main
+console_scripts =
+  dsul-daemon = dsul.daemon:main [pyserial]
+  dsul-cli = dsul.cli:main
+
+[tool:pytest]
+testpaths =
+  tests
+norecursedirs=dist build .tox scripts
+addopts =
+  --doctest-modules
+  --cov-config=setup.cfg
+  --cov-append
+  --cov-report=xml
+  --cov=dsul
+  -r a
+  -v
