Updates mypy and Travis-CI settings
- pylint should not fail build because of warnings.
- mypy settings saved to config file (so to be used in builds).

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - flake8 dsul/*.py
   - mypy dsul
-  - pylint dsul
+  - pylint dsul || true
   - pytest
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
