--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,8 @@
 [mypy]
 warn_unused_configs = True
+no_strict_optional = True
+ignore_missing_imports = True
+namespace_packages = True
 
 [mypy-tests.*]
 ignore_errors = True
