--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: 5.6.4
     hooks:
       - id: isort
-        files: '.*'
+        files: 'dsul/.*'
       - id: isort
         files: 'tests/.*'
   - repo: https://github.com/ambv/black
