Updates Travis-CI config
- Only build master branch on push.
  We don't need to build on every feature branch push.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+branches:
+  only:
+    - master
 env:
   global:
     - CC_TEST_REPORTER_ID=1c104053bc2f9addd05159a78da700015ff8e6ea3f85bd613745ace98914e890
