Fixes minor issues and typos.
- Increments patch version.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dsul
-version = 0.4.3
+version = 0.4.4
 description = Disturb State USB Light
 license = MIT
 repository = https://github.com/hymnis/dsul-python
@@ -38,7 +38,7 @@ console_scripts =
 [tool:pytest]
 testpaths =
   tests
-norecursedirs=dist build .tox scripts
+norecursedirs=dist build .tox scripts assets
 addopts =
   --doctest-modules
   --cov-config=setup.cfg
