Updates, adds and fixes
- Adds udev and systemd files for automatic startup of daemon when usb
device is plugged in.
- Updates cli.py and fixes some naming.
- Updates .codeclimate.yml and adjusts settings for checks.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,12 @@
 ---
 version: "2"
+checks:
+  method-complexity:
+    config:
+      threshold: 10
+  file-lines:
+    config:
+      threshold: 500
 exclude_patterns:
   - .venv/
   - scripts/
