Updates development requirements

--- a/requirements.development.txt
+++ b/requirements.development.txt
@@ -1,17 +1,17 @@
 black
-flake8
-pylint
+flake8==3.9.2
+pylint>=2.9.0
 mypy
-isort
+isort>=5.9.0
 coverage==4.4.0
-pytest
-pytest-cov
-pytest-cover
+pytest==6.1.2
+pytest-cov>=2.10.0
+pytest-cover==3.0.0
 pytest-coverage
 pylama>=7.6.6
-pre-commit
-setuptools
-pep517
+pre-commit>=2.8.0
+setuptools==44.0.0
+pep517>=0.8.0
 configparser>=4.0.2
 pyserial==3.4
 PyYAML>=5.3
