--- a/requirements.development.txt
+++ b/requirements.development.txt
@@ -1,17 +1,18 @@
 black
 flake8==3.9.2
 pylint>=2.9.0
-mypy
+mypy>=0.900
 isort>=5.9.0
-coverage==4.4.0
-pytest==6.1.2
-pytest-cov>=2.10.0
-pytest-cover==3.0.0
+coverage>=5.0
+pytest>=6.1.2
+pytest-cov>=2.11.0
+pytest-cover>=3.0.0
 pytest-coverage
-pylama>=7.6.6
+pylama>=7.7
 pre-commit>=2.13.0
 setuptools==44.0.0
-pep517>=0.10.0
-configparser>=4.0.2
+types-setuptools>=57.0
+build>=0.6
+configparser>=5.0
 pyserial==3.4
 PyYAML>=5.3
