--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,11 @@ name = dsul
 version = 0.4.4
 description = Disturb State USB Light
 license = MIT
-repository = https://github.com/hymnis/dsul-python
-authors = hymnis <hymnis@plazed.net>
+url = https://github.com/hymnis/dsul-python
+author = hymnis
+author_email = hymnis@plazed.net
 readme = README.md
+platforms = linux, windows, macos
 keywords = usb dsul led rgb
 classifiers = [
   "Environment :: Console",
