Minor fixes and updates
- Update Travis CI settings:
  - Move from Ubuntu Bionic (18) to Focal (20).
  - Drop support for Python 3.6 and add support for 3.9 instead.
- Adjust minor things in daemon:
  - Send 'ping' instead of 'ok' on received ping command.
  - No ending ';' in information string.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 os: linux
-dist: bionic
+dist: focal
 
 branches:
   only:
@@ -11,9 +11,9 @@ env:
     - CC_TEST_REPORTER_ID=1c104053bc2f9addd05159a78da700015ff8e6ea3f85bd613745ace98914e890
 
 python:
-- 3.6
 - 3.7
 - 3.8
+- 3.9
 
 install:
 - pip install -r requirements.development.txt
