--- a/requirements.development.txt
+++ b/requirements.development.txt
@@ -1,6 +1,6 @@
-black
+black>=22.0.0
 flake8==3.9.2
-pylint>=2.9.0
+pylint>=3.0.0
 mypy>=0.900
 isort>=5.9.0
 coverage>=5.0
@@ -10,7 +10,7 @@ pytest-cover>=3.0.0
 pytest-coverage
 pylama>=7.7
 pre-commit>=2.13.0
-setuptools==44.0.0
+setuptools==65.5.1
 types-setuptools>=57.0
 build>=0.6
 configparser>=5.0
